# cf-ros2

./: .gitignore  README.md  setup.sh
CrazySim/crazyflie-firmware/: .gitmodules
CrazySim/crazyflie-firmware/sitl_make/: CMakeLists.txt
CrazySim/crazyflie-firmware/src/deck/drivers/src/: deck_sitl.c
CrazySim/crazyflie-firmware/src/hal/src/: pm_sitl.c  radiolink_sitl.c
CrazySim/crazyflie-firmware/tools/crazyflie-simulation/simulator_files/gazebo/launch/: sitl_singleagent.sh
CrazySim/crazyflie-firmware/tools/crazyflie-simulation/simulator_files/gazebo/models/crazyflie_thrust_upgrade/: model.sdf.jinja
CrazySim/crazyflie-firmware/tools/crazyflie-simulation/simulator_files/gazebo/models/drone_gate/: model.config  model.sdf
CrazySim/crazyflie-firmware/tools/crazyflie-simulation/simulator_files/gazebo/worlds/: circle.sdf  lemniscate.sdf  uturn.sdf
CrazySim/crazyflie-lib-python/: pyproject.toml
CrazySim/crazyswarm2_ws/src/crazyswarm2/: .gitmodules
CrazySim/crazyswarm2_ws/src/crazyswarm2/crazyflie/: CMakeLists.txt
CrazySim/crazyswarm2_ws/src/crazyswarm2/crazyflie/config/: crazyflies.yaml
CrazySim/crazyswarm2_ws/src/crazyswarm2/crazyflie/launch/: launch.py
CrazySim/crazyswarm2_ws/src/crazyswarm2/crazyflie/scripts/: crazyflie_server.py
CrazySim/crazyswarm2_ws/src/crazyswarm2/crazyflie/src/: crazyflie_server.cpp
CrazySim/crazyswarm2_ws/src/crazyswarm2/crazyflie_examples/: setup.cfg
CrazySim/crazyswarm2_ws/src/crazyswarm2/crazyflie_examples/crazyflie_examples/controllers/: waypoint_follower.py
(+2 files in other folders)
